# slash

./: LICENSE  README.md  pyproject.toml
.github/workflows/: sphinx.yml
docs/: requirements.txt
docs/source/: cli-api.md  conf.py  index.md  install.md  python-api.md  tutorial.md
docs/source/apidocs/: index.rst
docs/source/apidocs/slash/: slash.cli.md  slash.core.config.md  slash.core.constants.md  slash.core.envs.md  slash.core.initialize.md  slash.core.md  slash.core.service.md  slash.core.shell.md  slash.daemon.md  slash.md  slash.slash.md  slash.utils.md
slash/: __init__.py  backend.py  bindport.py  cli.py  daemon.py  docstrings.py  slash.py  utils.py
slash/core/: __init__.py  config.py  constants.py  envs.py  initialize.py  service.py  shell.py
tests/: test_common.py  test_envs.py
